// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly in mode desktop 1`] = `
<div
  className="container"
>
  NavBarItemDesktop
</div>
`;

exports[`should render correctly in mode mobile 1`] = `
<div
  className="container"
>
  NavBarItemTablet
</div>
`;

exports[`should render correctly overlay content 1`] = `
<div
  aria-modal="true"
  className="bp3-card bp3-elevation-4"
  role="dialog"
>
  <div
    className="bp3-card bp3-elevation-0"
  >
    <div
      className="mentions-legales"
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "<b>Hello</b> world!",
          }
        }
      />
    </div>
  </div>
</div>
`;
